# lernaean-hydra

./: README.md
code/: README~
code/ads/: Makefile.am  NEWS  README  config.h.in  configure.ac
code/ads/bindings/nodejs/: fakeserver.js  server.js  telnet-server.js  test.js
code/ads/bindings/nodejs/draw/css/: application.css
code/ads/bindings/nodejs/draw/js/: application.js
code/ads/include/ads/: file_access_manager.h  isax_file_loaders.h  isax_index.h  isax_node.h  isax_node_buffer.h  isax_node_split.h  isax_query_engine.h  isax_visualize_index.h
code/ads/include/ads/sax/.deps/: sax.Po  ts.Po
code/ads/src/.deps/: isax_first_buffer_layer.Po  pqueue.Po
code/ads/src/ads/: isax_file_loaders.c  isax_index.c  isax_node_buffer.c  isax_node_split.c  pqueue.c
code/ads/src/ads/.deps/: isax_index.Po  isax_node.Po  isax_node_buffer.Po  isax_node_record.Po  isax_node_split.Po  isax_visualize_index.Po  lib_libads_a-isax_index.Po  lib_libads_a-isax_node.Po  lib_libads_a-isax_visualize_index.Po  libads_a-isax_file_loaders.Po  libads_a-isax_first_buffer_layer.Po  libads_a-isax_index.Po  libads_a-isax_node.Po  libads_a-isax_query_engine.Po  pqueue.Po
code/ads/src/ads/sax/: sax.c
code/ads/src/ads/sax/.deps/: lib_libads_a-sax.Po  libads_a-ts.Po
code/ads/src/utils/: ads.c  query-ads-index.c
code/ads/src/utils/.deps/: bin_ads-ads.Po  bin_ads_server-ads-server.Po
code/vaplus/: config.h  configure.ac
code/vaplus/include/: .#vaplus_index.h  dft.h  ts.h  vaplus_file_buffer_manager.h  vaplus_file_loaders.h  vaplus_query_engine.h
code/vaplus/src/: calc_utils.c  ts.c  vaplus.c  vaplus_file_buffer.c  vaplus_file_buffer_manager.c  vaplus_file_loaders.c  vaplus_node.c
code/vaplus/src/.deps/: bin_sfa-sfa.Po  lib_libdstree_a-dstree_query_engine.Po  lib_libsfa_a-sfa_node.Po  lib_libsfa_a-sfa_trie.Po  lib_libvaplus_a-ts.Po  lib_libvaplus_a-vaplus_file_buffer_manager.Po  lib_libvaplus_a-vaplus_file_loaders.Po  lib_libvaplus_a-vaplus_index.Po  lib_libvaplus_a-vaplus_query_engine.Po
hydra1/code/dstree/ds-tree-c/: Makefile.am  README  autogen.sh  config.status  globals.h
hydra1/code/dstree/ds-tree-c/autom4te.cache/: requests  traces.1
hydra1/code/dstree/ds-tree-c/include/: dstree_file_buffer.h  dstree_file_buffer_manager.h  dstree_file_loaders.h  dstree_index.h  dstree_query_engine.h  pqueue.h
hydra1/code/dstree/ds-tree-c/src/: bins.out  calc_utils.c  dstree.c  dstree_file_buffer.c  dstree_file_buffer_manager.c  dstree_file_loaders.c  dstree_index.c  dstree_node.c  dstree_node_split.c  dstree_query_engine.c  ts.c
hydra1/code/mass/: AUTHORS  Makefile.am  config.h.in  configure.ac
hydra1/code/mass/include/: calc_utils.h  mass_buffer_manager.h  mass_instance.h
hydra1/code/mass/src/: calc_utils.c  mass_buffer_manager.c  mass_instance.c  mass_query_engine.c  ts.c
hydra1/code/mass/src/.deps/: bin_dstree-dstree.Po  lib_libdstree_a-calc_utils.Po  lib_libdstree_a-dstree_file_buffer_manager.Po  lib_libdstree_a-dstree_index.Po  lib_libdstree_a-dstree_node.Po  lib_libdstree_a-dstree_node_split.Po  lib_libdstree_a-pqueue.Po  lib_libdstree_a-ts.Po  lib_libmass_a-mass_file_loaders.Po  lib_libmass_a-mass_query_engine.Po
hydra1/code/sfa/: AUTHORS  Makefile.am
hydra1/code/sfa/include/: dft.h  sfa_file_buffer.h  sfa_node.h  sfa_trie.h  ts.h
hydra1/code/sfa/src/: dft.c  sfa.c  sfa_file_loaders.c  sfa_trie.c  ts.c
hydra1/code/sfa/src/.deps/: bin_dstree-dstree.Po  lib_libdstree_a-calc_utils.Po  lib_libdstree_a-dstree_index.Po  lib_libdstree_a-pqueue.Po  lib_libsfa_a-sfa_file_buffer.Po  lib_libsfa_a-sfa_file_loaders.Po  lib_libsfa_a-sfa_node.Po  lib_libsfa_a-ts.Po
hydra2/code/flann/examples/: CMakeLists.txt  Makefile  cmake_install.cmake  flann_hydra.c  karima_example.c  learnean_hydra.c  stats.c
hydra2/code/hnsw/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.dbg  Makefile  cmake_install.cmake  hnsw  hnsw.cpp  run_hnsw  sift_1b.cpp  sift_test.cpp  stats.cpp  stats.hpp
hydra2/code/hnsw/examples/: example.py
hydra2/code/hnsw/hnswlib/: hnswalg.h  space_l2.h
hydra2/code/isax2plus/: Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  experiments.sh  globals.h  index.out
hydra2/code/isax2plus/autom4te.cache/: output.1  requests  traces.0
hydra2/code/isax2plus/demos/: run_it
hydra2/code/isax2plus/include/: config.h  isax_file_loaders.h  isax_index.h  isax_query_engine.h
hydra2/code/isax2plus/include/sax/: sax.h
hydra2/code/isax2plus/src/: #isax_index.c#  .#isax_index.c  isax_file_loaders.c  isax_first_buffer_layer.c  isax_index.c  isax_node.c  isax_node_record.c  isax_query_engine.c  main.c  pqueue.c
hydra2/code/isax2plus/src/.deps/: bin_isax2plus-main.Po  lib_libisax2plus_a-isax_file_loaders.Po  lib_libisax2plus_a-isax_first_buffer_layer.Po  lib_libisax2plus_a-isax_index.Po  lib_libisax2plus_a-isax_node.Po  lib_libisax2plus_a-isax_node_buffer.Po  lib_libisax2plus_a-isax_node_record.Po  lib_libisax2plus_a-isax_node_split.Po  lib_libisax2plus_a-isax_query_engine.Po  lib_libisax2plus_a-isax_visualize_index.Po  lib_libisax2plus_a-pqueue.Po
hydra2/code/isax2plus/src/sax/: .#sax_breakpoints.h  sax.c
hydra2/code/isax2plus/src/sax/.deps/: lib_libisax2plus_a-sax.Po  lib_libisax2plus_a-ts.Po
hydra2/code/serial-scan/src/serial/: Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.ac
hydra2/code/serial-scan/src/serial/autom4te.cache/: output.1  requests  traces.0
hydra2/code/serial-scan/src/serial/include/: serial_scan_utils.h  serial_scan_utils.h~  ts.h~
hydra2/code/serial-scan/src/serial/src/: #serial_scan_utils.c#  serial_scan.c  serial_scan_utils.c  ts.c
hydra2/code/vaplus/src/vaplus-c/: Makefile  Makefile.am  Makefile.in  README  config.status  globals.h  runIt  runProfiling
hydra2/code/vaplus/src/vaplus-c/autom4te.cache/: output.0  requests  traces.0  traces.1
hydra2/code/vaplus/src/vaplus-c/include/: calc_utils.h  dft.h  stats.h  stats.h~  ts.h  vaplus_file_buffer.h  vaplus_file_buffer_manager.h  vaplus_file_loaders.h  vaplus_index.h  vaplus_node.h  vaplus_query_engine.h
tools/: Makefile  (+3 more)
(+634 files in other folders)
